tests/type-errors/no_container_aggregate_variable.arl
archetype no_container_aggregate_variable

asset et identified by cid { cid: int; }

asset e identified by eid {
	eid			: string;
	cells		: et aggregate;
}

variable c : et aggregate = []

entry start () {
	effect {
		()
	}
}
